# hierarchical-face-clustering

./: .gitignore  CMakeLists.txt  ClusteringAlgorithm.cpp  ClusteringAlgorithm.h  main.cpp
test/: output.txt
